DOWNLOAD button alignment fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5113,7 +5113,6 @@ body {
   border-radius: 10px;
   background-color: #828282;
   margin-bottom: 20px;
-  width: 100px;
   margin-top: -15px;
   margin-bottom: 50px;
   text-align: center;
